--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/HenryGarmendia/travel_site#readme",
   "dependencies": {
+    "del": "^3.0.0",
     "jquery": "^3.2.1",
     "normalize.css": "^7.0.0"
   },
@@ -25,6 +26,8 @@
     "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
     "gulp-postcss": "^7.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-svg-sprite": "^1.3.7",
     "gulp-watch": "^4.3.11",
     "postcss-import": "^11.0.0",
     "postcss-mixins": "^6.2.0",
