--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
+    "gulp-modernizr": "^1.0.0-alpha",
     "gulp-postcss": "^7.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-svg-sprite": "^1.3.7",
+    "gulp-svg2png": "^2.0.2",
     "gulp-watch": "^4.3.11",
     "postcss-hexrgba": "^1.0.0",
     "postcss-import": "^11.0.0",
