--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
+    "gulp-imagemin": "^4.0.0",
     "gulp-modernizr": "^1.0.0-alpha",
     "gulp-postcss": "^7.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-svg-sprite": "^1.3.7",
     "gulp-svg2png": "^2.0.2",
+    "gulp-usemin": "^0.3.28",
     "gulp-watch": "^4.3.11",
     "postcss-hexrgba": "^1.0.0",
     "postcss-import": "^11.0.0",
